NIFI-12220: Eliminated authentication properties from AWS processors and migrated all processors to using Controller Service or authentication.