@@ -26,9 +26,9 @@ import org.apache.nifi.components.ConfigVerificationResult.Outcome;
 import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.components.ValidationContext;
 import org.apache.nifi.components.ValidationResult;
-import org.apache.nifi.context.PropertyContext;
 import org.apache.nifi.expression.ExpressionLanguageScope;
 import org.apache.nifi.logging.ComponentLog;
+import org.apache.nifi.migration.PropertyConfiguration;
 import org.apache.nifi.processor.AbstractSessionFactoryProcessor;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
@@ -37,17 +37,12 @@ import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.VerifiableProcessor;
 import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.processor.util.StandardValidators;
-import org.apache.nifi.processors.aws.credentials.provider.PropertiesCredentialsProvider;
-import org.apache.nifi.processors.aws.credentials.provider.factory.CredentialPropertyDescriptors;
 import org.apache.nifi.processors.aws.credentials.provider.service.AWSCredentialsProviderService;
 import org.apache.nifi.proxy.ProxyConfiguration;
 import org.apache.nifi.proxy.ProxyConfigurationService;
 import org.apache.nifi.proxy.ProxySpec;
 import org.apache.nifi.ssl.SSLContextService;
-import software.amazon.awssdk.auth.credentials.AnonymousCredentialsProvider;
-import software.amazon.awssdk.auth.credentials.AwsBasicCredentials;
 import software.amazon.awssdk.auth.credentials.AwsCredentialsProvider;
-import software.amazon.awssdk.auth.credentials.StaticCredentialsProvider;
 import software.amazon.awssdk.awscore.client.builder.AwsClientBuilder;
 import software.amazon.awssdk.core.SdkClient;
 import software.amazon.awssdk.core.client.builder.SdkClientBuilder;
@@ -58,16 +53,12 @@ import software.amazon.awssdk.http.TlsKeyManagersProvider;
 import software.amazon.awssdk.regions.Region;
 
 import javax.net.ssl.TrustManager;
-import java.io.File;
 import java.net.Proxy;
 import java.net.URI;
 import java.nio.file.Path;
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -81,6 +72,8 @@ import java.util.concurrent.TimeUnit;
  * @see <a href="https://sdk.amazonaws.com/java/api/latest/software/amazon/awssdk/auth/credentials/AwsCredentialsProvider.html">AwsCredentialsProvider</a>
  */
 public abstract class AbstractAwsProcessor<T extends SdkClient> extends AbstractSessionFactoryProcessor implements VerifiableProcessor {
+    private static final String CREDENTIALS_SERVICE_CLASSNAME = "org.apache.nifi.processors.aws.credentials.provider.service.AWSCredentialsProviderControllerService";
+
 
     public static final Relationship REL_SUCCESS = new Relationship.Builder()
             .name("success")
@@ -92,15 +85,7 @@ public abstract class AbstractAwsProcessor<T extends SdkClient> extends Abstract
             .description("FlowFiles are routed to failure relationship")
             .build();
 
-    private static final Set<Relationship> relationships = Collections.unmodifiableSet(
-            new LinkedHashSet<>(Arrays.asList(REL_SUCCESS, REL_FAILURE))
-    );
-
-    public static final PropertyDescriptor CREDENTIALS_FILE = CredentialPropertyDescriptors.CREDENTIALS_FILE;
-
-    public static final PropertyDescriptor ACCESS_KEY = CredentialPropertyDescriptors.ACCESS_KEY_ID;
-
-    public static final PropertyDescriptor SECRET_KEY = CredentialPropertyDescriptors.SECRET_KEY;
+    private static final Set<Relationship> relationships = Set.of(REL_SUCCESS, REL_FAILURE);
 
     public static final PropertyDescriptor PROXY_HOST = new PropertyDescriptor.Builder()
             .name("Proxy Host")
@@ -178,7 +163,7 @@ public abstract class AbstractAwsProcessor<T extends SdkClient> extends Abstract
             .name("AWS Credentials Provider service")
             .displayName("AWS Credentials Provider Service")
             .description("The Controller Service that is used to obtain AWS credentials provider")
-            .required(false)
+        .required(true)
             .identifiesControllerService(AWSCredentialsProviderService.class)
             .build();
 
@@ -226,19 +211,30 @@ public abstract class AbstractAwsProcessor<T extends SdkClient> extends Abstract
     }
 
     @Override
+    public void migrateProperties(final PropertyConfiguration config) {
+        if (config.isPropertySet("Access Key") && config.isPropertySet("Secret Key")) {
+            final String serviceId = config.createControllerService(CREDENTIALS_SERVICE_CLASSNAME, Map.of(
+                "Access Key", config.getRawPropertyValue("Access Key").get(),
+                "Secret Key", config.getRawPropertyValue("Secret Key").get()));
+            config.setProperty(AWS_CREDENTIALS_PROVIDER_SERVICE.getName(), serviceId);
+        } else if (config.isPropertySet("Credentials File")) {
+            final String serviceId = config.createControllerService(CREDENTIALS_SERVICE_CLASSNAME, Map.of(
+                "Credentials File", config.getRawPropertyValue("CredentialsFile").get()));
+            config.setProperty(AWS_CREDENTIALS_PROVIDER_SERVICE, serviceId);
+        } else if (!config.isPropertySet(AWS_CREDENTIALS_PROVIDER_SERVICE)) {
+            final String serviceId = config.createControllerService(CREDENTIALS_SERVICE_CLASSNAME, Map.of(
+                "default-credentials", "true"));
+            config.setProperty(AWS_CREDENTIALS_PROVIDER_SERVICE, serviceId);
+        }
+
+        config.removeProperty("Access Key");
+        config.removeProperty("Secret Key");
+        config.removeProperty("Credentials File");
+    }
+
+    @Override
     protected Collection<ValidationResult> customValidate(final ValidationContext validationContext) {
         final List<ValidationResult> validationResults = new ArrayList<>(super.customValidate(validationContext));
-
-        final boolean accessKeySet = validationContext.getProperty(ACCESS_KEY).isSet();
-        final boolean secretKeySet = validationContext.getProperty(SECRET_KEY).isSet();
-        if ((accessKeySet && !secretKeySet) || (secretKeySet && !accessKeySet)) {
-            validationResults.add(new ValidationResult.Builder().input("Access Key").valid(false).explanation("If setting Secret Key or Access Key, must set both").build());
-        }
-
-        final boolean credentialsFileSet = validationContext.getProperty(CREDENTIALS_FILE).isSet();
-        if ((secretKeySet || accessKeySet) && credentialsFileSet) {
-            validationResults.add(new ValidationResult.Builder().input("Access Key").valid(false).explanation("Cannot set both Credentials File and Secret Key/Access Key").build());
-        }
 
         final boolean proxyHostSet = validationContext.getProperty(PROXY_HOST).isSet();
         final boolean proxyPortSet = validationContext.getProperty(PROXY_HOST_PORT).isSet();
@@ -411,28 +407,8 @@ public abstract class AbstractAwsProcessor<T extends SdkClient> extends Abstract
      * @return AwsCredentialsProvider the credential provider
      */
     protected AwsCredentialsProvider getCredentialsProvider(final ProcessContext context) {
-        final AWSCredentialsProviderService awsCredentialsProviderService =
-              context.getProperty(AWS_CREDENTIALS_PROVIDER_SERVICE).asControllerService(AWSCredentialsProviderService.class);
-
-        return awsCredentialsProviderService != null ? awsCredentialsProviderService.getAwsCredentialsProvider() : createStaticCredentialsProvider(context);
-
-    }
-
-    protected AwsCredentialsProvider createStaticCredentialsProvider(final PropertyContext context) {
-        final String accessKey = context.getProperty(ACCESS_KEY).evaluateAttributeExpressions().getValue();
-        final String secretKey = context.getProperty(SECRET_KEY).evaluateAttributeExpressions().getValue();
-
-        final String credentialsFile = context.getProperty(CREDENTIALS_FILE).getValue();
-
-        if (credentialsFile != null) {
-            return new PropertiesCredentialsProvider(new File(credentialsFile));
-        }
-
-        if (accessKey != null && secretKey != null) {
-            return StaticCredentialsProvider.create(AwsBasicCredentials.create(accessKey, secretKey));
-        }
-
-        return AnonymousCredentialsProvider.create();
+        final AWSCredentialsProviderService awsCredentialsProviderService = context.getProperty(AWS_CREDENTIALS_PROVIDER_SERVICE).asControllerService(AWSCredentialsProviderService.class);
+        return awsCredentialsProviderService.getAwsCredentialsProvider();
     }
 
 
