@@ -87,7 +87,6 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.sql.Timestamp;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -284,7 +283,7 @@ public class ListS3 extends AbstractS3Processor implements VerifiableProcessor {
         .build();
 
 
-    public static final List<PropertyDescriptor> properties = Collections.unmodifiableList(Arrays.asList(
+    public static final List<PropertyDescriptor> properties = List.of(
             BUCKET_WITHOUT_DEFAULT_VALUE,
             REGION,
             AWS_CREDENTIALS_PROVIDER_SERVICE,
@@ -298,9 +297,6 @@ public class ListS3 extends AbstractS3Processor implements VerifiableProcessor {
             BATCH_SIZE,
             WRITE_OBJECT_TAGS,
             WRITE_USER_METADATA,
-            ACCESS_KEY,
-            SECRET_KEY,
-            CREDENTIALS_FILE,
             TIMEOUT,
             SSL_CONTEXT_SERVICE,
             ENDPOINT_OVERRIDE,
@@ -316,7 +312,7 @@ public class ListS3 extends AbstractS3Processor implements VerifiableProcessor {
             PREFIX,
             USE_VERSIONS,
             LIST_TYPE,
-            REQUESTER_PAYS));
+        REQUESTER_PAYS);
 
     public static final Set<Relationship> relationships = Collections.singleton(REL_SUCCESS);
 
